testing: Use parking_lot::Mutex in captaind

--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -43,3 +43,4 @@ futures.workspace = true
 async-trait.workspace = true
 tokio-postgres.workspace = true
 semver.workspace = true
+parking_lot.workspace = true
