server: Migrate from fern to env_logger and remove structured.log
I also redid the processing of log and slog messages in the testing
module

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -44,7 +44,7 @@ ipnet = "2.11.0"
 trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
 
 lazy_static.workspace = true
-fern.workspace = true
+env_logger.workspace = true
 chrono.workspace = true
 clap.workspace = true
 futures.workspace = true
