--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ http-body = "1.0.1"
 # rust stack
 lazy_static = "=1.4.0"
 fern = { version = "0.6.2", features = [ "colored" ] }
+env_logger = "0.11.8"
 clap = { version = "4.4.18", features = [ "derive", "env" ] }
 chrono = { version = "0.4", features = [ "serde" ] }
 serde_json = { version = "1", features = [ "raw_value" ] }
