--- a/server/config.default.toml
+++ b/server/config.default.toml
@@ -42,6 +42,7 @@ integration_address = "127.0.0.1:3537"
 host = "localhost"
 port = 5432
 name = "bark-server-db"
+max_connections = 10
 
 [bitcoind]
 url = "http://127.0.0.1:18443"
