--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -31,6 +31,8 @@ steps:
         nix develop .#default --command bash -c "
           cargo version &&
           cargo build --workspace &&
+          cargo install --locked --path bark &&
+          cargo install --locked --path server &&
           mkdir -p target-static target-deps target-unit target-libs &&
           (cp -r target target-static) &
           (cp -r target target-deps) &
