--- a/server-rpc/Cargo.toml
+++ b/server-rpc/Cargo.toml
@@ -22,6 +22,8 @@ bitcoin.workspace = true
 tonic.workspace = true
 
 # INTERNAL
+log.workspace = true
+http.workspace = true
 prost.workspace = true
 tokio.workspace = true
 thiserror.workspace = true
