--- a/.woodpecker/server-release.yml
+++ b/.woodpecker/server-release.yml
@@ -20,7 +20,7 @@ steps:
       - bash ./contrib/parse-versions.sh "${CI_COMMIT_TAG}" > VERSION
       - cat VERSION
 
-  - name: build-captaind
+  - name: build-server
     when:
       - event: tag
         ref: refs/tags/server-*
@@ -30,15 +30,16 @@ steps:
       SDKROOT: /usr/local/osxcross/SDK/MacOSX15.4.sdk
     commands:
       - cat VERSION
-      - just release-captaind
+      - just release-server
       - cp ./target/x86_64-unknown-linux-gnu/release/captaind captaind-linux-x86_64
+      - cp ./target/x86_64-unknown-linux-gnu/release/watchmand watchmand-linux-x86_64
 
   - name: build-and-push-captaind-to-registry
     when:
       - event: tag
         ref: refs/tags/server-*
     failure: ignore
-    depends_on: build-captaind
+    depends_on: build-server
     # When this task fails make sure the sha256 is still available.
     #  You can verify using command: `skopeo inspect docker://quay.io/buildah/stable`
     #  or `skopeo inspect docker://quay.io/buildah/stable@sha256:5f67b6ece887c7ffbc063d174fd95f057a76b218adf1160c7a5c3d63997efd4b`
@@ -91,27 +92,30 @@ steps:
       # Push containers with specific version number to docker.io
       - buildah push "docker.io/secondark/captaind:$(cat VERSION)"
 
-  - name: release-captaind
+  - name: release-server
     when:
       - event: tag
         ref: refs/tags/server-*
-    depends_on: build-captaind
+    depends_on: build-server
     image: registry.2nd.dev/build:23
     commands:
       - cat VERSION
       - cd ./target
       - cp x86_64-unknown-linux-gnu/release/captaind "captaind-$(cat ../VERSION)-linux-x86_64"
+      - cp x86_64-unknown-linux-gnu/release/watchmand "watchmand-$(cat ../VERSION)-linux-x86_64"
       - sha256sum "captaind-$(cat ../VERSION)-linux-x86_64" > SHA256SUMS
+      - sha256sum "watchmand-$(cat ../VERSION)-linux-x86_64" > SHA256SUMS
 
-  - name: publish-captaind
+  - name: publish-server
     when:
       - event: tag
         ref: refs/tags/server-*
-    depends_on: release-captaind
+    depends_on: release-server
     image: woodpeckerci/plugin-release@sha256:f746ad9a4e652d7b793d6aafdab3df01e7640abf66b49333ebae26edd1678c64
     settings:
       files:
         - "./target/captaind-*-linux-x86_64"
+        - "./target/watchmand-*-linux-x86_64"
         - "./target/SHA256SUMS"
       api_key:
         from_secret: RELEASE
