bark: Document the Wallet struct
- Add rand as a feature when generating documentation

--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -8,11 +8,12 @@ repository = "https://codeberg.org/ark-bitcoin/bark"
 readme = "README.md"
 
 [features]
-default = ["cli", "tls-native-roots"]
+default = ["cli", "tls-native-roots", "rand"]
 cli = ["clap", "env_logger", "home", "onchain_bdk", "toml"]
 onchain_bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk"]
 tls-native-roots = ["tonic/tls-native-roots"]
 tls-webpki-roots = ["tonic/tls-webpki-roots"]
+rand = ["dep:rand", "bitcoin/rand", "bip39/rand"]
 
 [lib]
 name = "bark"
@@ -68,6 +69,9 @@ env_logger = { workspace = true, optional = true }
 home = { version = "=0.5.9", optional = true }
 toml = { workspace = true, optional = true}
 
+# For some doctests
+rand = { workspace = true, optional = true }
+
 [dev-dependencies]
 ark-lib = { path = "../lib", features = [ "test-util" ] }
-rand.workspace = true
+rand = { workspace = true, optional = false }
