--- a/cln-rpc/Cargo.toml
+++ b/cln-rpc/Cargo.toml
@@ -11,6 +11,7 @@ ark-lib = { path = "../lib" }
 bitcoin.workspace = true
 tonic.workspace = true
 prost.workspace = true
+tonic-prost.workspace = true
 
 [build-dependencies]
-tonic-build.workspace= true
+tonic-prost-build.workspace= true
