--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ resolver = "2"
 # * EXPORTED (ECOSYSTEM)
 
 bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
-lightning-invoice = { version = "0.32.0-rc1", features = [ "std", "serde" ] }
+lightning-invoice = { version = "0.33.2", features = [ "std", "serde" ] }
 lightning = { version = "0.1.1", default-features = false, features = [ "std" ] }
 lnurl-rs = { version = "0.9.0", features = [ "async", "async-https-rustls" ], default-features = false }
 anyhow = { version = "1.0", features = [ "backtrace" ] }
@@ -29,8 +29,7 @@ thiserror = { version = "2.0.12" }
 log = { version = "0.4.27", features = [ "kv", "kv_serde" ] }
 serde = { version = "1.0.219" }
 # grpc clients
-tonic = { version = "0.13.1", features = [ "tls-webpki-roots", "gzip" ] }
-tonic-build = "0.13.1"
+tonic = { version = "0.14.2", features = [ "tls-webpki-roots", "gzip" ] }
 tower = "0.5.2"
 hyper = "1.6.0"
 http = "1.2.0"
@@ -51,7 +50,9 @@ humantime = "2.1.0"
 semver = "1.0.26"
 # async + gRPC stack
 parking_lot = "0.12.4"
-prost = "0.13.2"
+prost = "0.14.1"
+tonic-prost = "0.14.2"
+tonic-prost-build = "0.14.2"
 tokio = { version = "1.35", features = [ "rt-multi-thread", "fs", "signal" ] }
 tokio-util = { version = "0.7.14" }
 tokio-stream = { version = "0.1.14", features = [ "sync" ] }
@@ -68,12 +69,12 @@ rand = { version = "0.9.0", features = [ "std", "std_rng" ] }
 bdk_wallet = { version = "2.1.0" }
 bdk_core = { version = "0.6.1", default-features = false }
 bdk_esplora = { version = "0.22.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
-bdk_bitcoind_rpc = { version = "0.21.0" }
+bdk_bitcoind_rpc = { version = "0.22.0" }
 # tracing and monitoring
-opentelemetry = "0.30.0"
-opentelemetry_sdk = { version = "0.30.0", features = [ "trace", "rt-tokio" ] }
-opentelemetry-otlp = { version = "0.30.0", features = [ "trace", "grpc-tonic", "gzip-tonic" ] }
-opentelemetry-semantic-conventions = { version = "0.30.0", features = [ "semconv_experimental" ] }
+opentelemetry = "0.31.0"
+opentelemetry_sdk = { version = "0.31.0", features = [ "trace", "rt-tokio" ] }
+opentelemetry-otlp = { version = "0.31.0", features = [ "trace", "grpc-tonic", "gzip-tonic" ] }
+opentelemetry-semantic-conventions = { version = "0.31.0", features = [ "semconv_experimental" ] }
 tracing = { version = "0.1.41", features = [ "std", "attributes" ] }
-tracing-opentelemetry = "0.31.0"
+tracing-opentelemetry = "0.32.0"
 tracing-subscriber = { version = "0.3.19", features = [ "std", "registry", "ansi", "fmt", "env-filter" ] }
