lib: Update secp256k1 dependency to a temporary crate

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -33,9 +33,8 @@ serde_json = { workspace = true, optional = true }
 
 # using PR branch for musig2 code
 [dependencies.secp256k1-musig]
-package = "secp256k1"
-git = "https://github.com/rust-bitcoin/rust-secp256k1.git"
-rev = "72822e16b1433337baceb0abb5134cc24a062adb"
+package = "secp256k1-preview-xg2904r5rj"
+version = "0.32.0"
 features = [ "serde" ]
 
 [dev-dependencies]
