--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -32,32 +32,12 @@ steps:
           cargo version &&
           cargo build --workspace &&
           cargo install --locked --path bark &&
-          cargo install --locked --path server &&
-          mkdir -p target-static target-deps target-unit target-libs &&
-          (cp -r target target-static) &
-          (cp -r target target-deps) &
-          (cp -r target target-unit) &
-          (cp -r target target-libs) &
-          wait
-        "
-
-  - name: test-unit
-    depends_on: build
-    image: registry.2nd.dev/build:21
-    environment:
-      CARGO_TARGET_DIR: ./target-unit
-    commands:
-      - git log --oneline | head -n 1
-      - >
-        nix develop .#default --command bash -c "
-          cargo test --workspace --exclude ark-testing
+          cargo install --locked --path server
         "
 
   - name: compare-static-files
-    depends_on: build
+    depends_on: check-commits
     image: registry.2nd.dev/build:21
-    environment:
-      CARGO_TARGET_DIR: ./target-static
     commands:
       - >
         nix develop .#default --command bash -c "
@@ -76,11 +56,19 @@ steps:
       - bash contrib/check-clean-diff.sh server/config.default.toml
       - bash contrib/check-clean-diff.sh server/schema.sql
 
+  - name: test-unit
+    depends_on: build
+    image: registry.2nd.dev/build:21
+    commands:
+      - git log --oneline | head -n 1
+      - >
+        nix develop .#default --command bash -c "
+          cargo test --workspace --exclude ark-testing
+        "
+
   - name: use-bark-as-dependency
     depends_on: build
     image: registry.2nd.dev/build:21
-    environment:
-      CARGO_TARGET_DIR: ./target-deps
     commands:
       - >
         nix develop .#default --command bash -c "
@@ -94,8 +82,6 @@ steps:
   - name: bark-as-libs
     depends_on: build
     image: registry.2nd.dev/build:21
-    environment:
-      CARGO_TARGET_DIR: ./target-libs
     commands:
       - >
         nix develop .#default --command bash -c "
