--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ bb8-postgres = "0.9.0"
 postgres-types = { version = "0.2.9", features = [ "derive", "with-chrono-0_4" ] }
 futures = {version = "0.3.30"}
 async-trait = "0.1.83"
+pin-project = "1.1.10"
 # bitcoin
 bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
 miniscript = "12.3"
