--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -46,6 +46,7 @@ chrono.workspace = true
 clap.workspace = true
 futures.workspace = true
 async-trait.workspace = true
+pin-project.workspace = true
 serde_json.workspace = true
 rmp-serde.workspace = true
 config.workspace = true
