--- a/.woodpecker/main.yml
+++ b/.woodpecker/main.yml
@@ -27,11 +27,12 @@ steps:
         from_secret: github-mirror-push-key
 
   - name: prechecks
-    image: registry.2nd.dev/build:21
+    image: registry.2nd.dev/build:23
     volumes:
       - /data:/host/data
     commands:
+      - sudo chown -R nixuser:nixbld /woodpecker
       - git log --oneline | head -n 1
       - rm -rf "/host/data/test/${CI_COMMIT_SHA}/" || true
       - rm -rf "/host/data/codecov/${CI_COMMIT_SHA}/" || true
-      - just prechecks
+      - nix develop .#default --command bash -c "just prechecks"
