--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bark-bitcoin-ext"
-version = "0.0.0"
+version = "0.1.0-beta.1"
 edition = "2024"
 
 [lib]
@@ -24,7 +24,7 @@ log = { workspace = true, optional = true }
 thiserror = { workspace = true }
 
 # rpc
-bdk_bitcoind_rpc = { version = "0.21.0", optional = true }
+bdk_bitcoind_rpc = { workspace = true, optional = true }
 bdk_esplora = { version = "0.22.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false, optional = true }
 reqwest = { version = "0.12.18", features = [ "rustls-tls" ], default-features = false, optional = true }
 async-trait = { version = "0.1.88", optional = true }
