--- a/server-log/Cargo.toml
+++ b/server-log/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bark-server-log"
-version = "0.0.0"
+version = "0.1.0-beta.1" # lock to bark-server version
 edition = "2024"
 
 [lib]
