--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -3,8 +3,9 @@ name = "bark-wallet"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
 authors = ["Steven Roose <steven@roose.io>"]
-edition = "2024"
 repository = "https://codeberg.org/ark-bitcoin/bark"
+description = "Wallet library and CLI for the bitcoin Ark protocol built by Second"
+edition = "2024"
 readme = "README.md"
 
 [features]
