--- a/cln-rpc/Cargo.toml
+++ b/cln-rpc/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "bark-cln-rpc"
 version = "0.1.0+cln.25.09-hold.0.3.2.patched"
+license = "CC0-1.0"
+authors = [ "Steven Roose <steven@roose.io>" ]
+repository = "https://codeberg.org/ark-bitcoin/bark"
+description = "Generated gRPC code for c-lightning used in bark"
 edition = "2024"
 
 [lib]
