--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,6 +5,7 @@ license = "CC0-1.0"
 authors = [ "Steven Roose <steven@roose.io>" ]
 edition = "2024"
 repository = "https://codeberg.org/ark-bitcoin/bark"
+description = "Primitives for the Ark protocol and bark implementation"
 
 [lib]
 name = "ark"
