--- a/server-rpc/Cargo.toml
+++ b/server-rpc/Cargo.toml
@@ -3,8 +3,9 @@ name = "bark-server-rpc"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
 authors = [ "Steven Roose <steven@roose.io>" ]
-edition = "2024"
 repository = "https://codeberg.org/ark-bitcoin/bark"
+description = "gRPC code for bark-server API"
+edition = "2024"
 
 [lib]
 name = "server_rpc"
