--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,8 +3,9 @@ name = "bark-server"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
 authors = ["Steven Roose <steven@roose.io>"]
-edition = "2024"
 repository = "https://codeberg.org/ark-bitcoin/bark"
+description = "Server implementation of the bitcoin Ark protocol built by Second"
+edition = "2024"
 
 [lib]
 name = "server"
