Specify versions of dependencies for crates to publish to crates.io

--- a/server-rpc/Cargo.toml
+++ b/server-rpc/Cargo.toml
@@ -16,7 +16,7 @@ intman = []
 
 [dependencies]
 # OWN
-ark-lib = { path = "../lib" }
+ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
 bitcoin.workspace = true
 
 # EXPORTED
