--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2024"
 
 [dependencies]
 # OWN
-ark-lib = { path = "../lib" }
-bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
+ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
+bark-bitcoin-ext = { version = "0.1.0-beta.1", path = "../bitcoin-ext", default-features = false }
 
 # EXPORTED
 bitcoin.workspace = true
