--- a/cln-rpc/Cargo.toml
+++ b/cln-rpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bark-cln-rpc"
-version = "0.1.0+cln.25.09-hold.0.3.2.patched"
+version = "0.2.0+cln.25.09-hold.0.3.2.patched"
 license = "CC0-1.0"
 authors = [ "Steven Roose <steven@roose.io>" ]
 repository = "https://codeberg.org/ark-bitcoin/bark"
@@ -11,7 +11,7 @@ edition = "2024"
 name = "cln_rpc"
 
 [dependencies]
-ark-lib = { path = "../lib" }
+ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
 bitcoin.workspace = true
 tonic.workspace = true
 prost.workspace = true
