bark: add onchain transaction list

--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 [features]
 default = ["cli", "tls-native-roots", "rand"]
 cli = ["clap", "env_logger", "home", "onchain_bdk", "toml"]
-onchain_bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk"]
+onchain_bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk", "hal"]
 tls-native-roots = ["tonic/tls-native-roots"]
 tls-webpki-roots = ["tonic/tls-webpki-roots"]
 rand = ["dep:rand", "bitcoin/rand", "bip39/rand"]
@@ -69,6 +69,7 @@ clap = { workspace = true, optional = true }
 env_logger = { workspace = true, optional = true }
 home = { version = "=0.5.9", optional = true }
 toml = { workspace = true, optional = true}
+hal = { version = "=0.10.0", default-features = false, optional = true}
 
 # For some doctests
 rand = { workspace = true, optional = true }
